.provarCaches/00D410000011HE0EAM/objects/rstkf__paysessinv__c.object
<CustomObject>
    <description>paysessinv__c</description>
    <fields>
        <fullName>rstkf__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__formula_extid__c</fullName>
        <formula>null</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__formula_name__c</fullName>
        <formula>rstkf__paysessinv_paysessvend__r.Name + &apos;-&apos; + rstkf__paysessinv_apinvtxn__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__paysessinv_amtapplmaint__c</fullName>
        <label>Amount Applied (Txn Currency)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__paysessinv_amtapplmaint_modified__c</fullName>
        <formula>!ISPICKVAL(rstkf__paysessinv_apinvtxn__r.rstkf__apinvtxn_trantype__c, &apos;Vendor Credit&apos;) &amp;&amp; rstkf__paysessinv_amtapplmaint__c != rstkf__paysessinv_apinvtxn__r.rstkf__apinvtxn_amtapplmaint__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Applied Modified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__paysessinv_amtwht__c</fullName>
        <defaultValue>0</defaultValue>
        <label>WHT Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__paysessinv_apapplic__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Credit Application Transaction</label>
        <referenceTo>rstkf__apapplic__c</referenceTo>
        <relationshipLabel>Payment Selection Session Invoices</relationshipLabel>
        <relationshipName>paysessinvs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__paysessinv_apinvtxn__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice / Memo</label>
        <referenceTo>rstkf__apinvtxn__c</referenceTo>
        <relationshipLabel>Payment Selection Session Invoices</relationshipLabel>
        <relationshipName>paysessinvs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__paysessinv_bypasspost__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bypass in Posting Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__paysessinv_discavailable__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Discount Available</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__paysessinv_disctermamt__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__paysessinv_disctermamt_modified__c</fullName>
        <formula>rstkf__paysessinv_disctermamt__c != rstkf__paysessinv_apinvtxn__r.rstkf__apinvtxn_disctermamt__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount Amount Modified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__paysessinv_disctknamt__c</fullName>
        <label>Amount of Discount Taken</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__paysessinv_dsctknamtapplmaint__c</fullName>
        <label>Terms Disc Amt Taken Appl (Paymnt Curr)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__paysessinv_dsctknamtapplmaint_modified__c</fullName>
        <formula>rstkf__paysessinv_dsctknamtapplmaint__c != rstkf__paysessinv_apinvtxn__r.rstkf__apinvtxn_dsctknamtapplmaint__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Disc Amt Taken Modified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__paysessinv_grosspay__c</fullName>
        <formula>rstkf__paysessinv_netpay__c + rstkf__paysessinv_disctknamt__c +  rstkf__paysessinv_amtwht__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__paysessinv_maintamt__c</fullName>
        <label>Transaction Total (Txn Currency)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__paysessinv_maintamt_modified__c</fullName>
        <formula>rstkf__paysessinv_maintamt__c != rstkf__paysessinv_apinvtxn__r.rstkf__apinvtxn_maintamt__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transaction Total Modified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__paysessinv_netpay__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Net  Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__paysessinv_netpaybank__c</fullName>
        <formula>rstkf__paysessinv_netpay__c * rstkf__paysessinv_paysessvend__r.rstkf__paysessvend_payexchrate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field carries the Net Payment Amount in Bank Currency for this transaction.</inlineHelpText>
        <label>Net  Payment Amount – Bank Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__paysessinv_paysessvend__c</fullName>
        <label>Payment Session Vendor</label>
        <referenceTo>rstkf__paysessvend__c</referenceTo>
        <relationshipLabel>Payment Selection Session Invoices</relationshipLabel>
        <relationshipName>paysessinvs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstkf__paysessinv_payto__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Payment Selection Add Transaction Object</description>
        <label>Payment Selection Add Transaction Object</label>
        <referenceTo>rstkf__payto__c</referenceTo>
        <relationshipLabel>Payment Selection Session Invoices</relationshipLabel>
        <relationshipName>paysessinves</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__paysessinv_process__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Process for Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__paysessinv_termsbasedate__c</fullName>
        <label>Terms Base Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__paysessinv_termsbasedate_modified__c</fullName>
        <formula>rstkf__paysessinv_termsbasedate__c != rstkf__paysessinv_apinvtxn__r.rstkf__apinvtxn_termsbasedate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Terms Disc Amt Taken Appl Modified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__paysessinv_termsdiscdate__c</fullName>
        <label>Discount Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__paysessinv_termsdiscdate_modified__c</fullName>
        <formula>rstkf__paysessinv_termsdiscdate__c != rstkf__paysessinv_apinvtxn__r.rstkf__apinvtxn_termsdiscdate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount Date Modified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__paysessinv_trantype__c</fullName>
        <formula>TEXT(rstkf__paysessinv_apinvtxn__r.rstkf__apinvtxn_trantype__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The type of this transaction. Options are Vendor Invoice, Vendor Credit and Vendor Debit</inlineHelpText>
        <label>Transaction Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__paysessinv_txncurrency__c</fullName>
        <formula>TEXT(rstkf__paysessinv_apinvtxn__r.rstkf__apinvtxn_maintcurr__r.rstk__sycurr_currency__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field shows the currency (ISO Code)associated with this transaction.</inlineHelpText>
        <label>Txn Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__paysessinv_unapplamtmaint__c</fullName>
        <label>Amount Unapplied (Txn Currency)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__paysessinv_unapplamtmaint_modified__c</fullName>
        <formula>rstkf__paysessinv_unapplamtmaint__c != rstkf__paysessinv_apinvtxn__r.rstkf__apinvtxn_unapplamtmaint__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Unapplied Modified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Payment Selection Session Invoices</label>
    <listViews>
        <fullName>rstkf__All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>317</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstkf__P_VIEW</fullName>
        <columns>NAME</columns>
        <columns>rstkf__paysessinv_paysessvend__c</columns>
        <columns>rstkf__paysessinv_apinvtxn__c</columns>
        <columns>rstkf__paysessinv_process__c</columns>
        <columns>rstkf__paysessinv_amtapplmaint__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstkf__paysessinv_unapplamtmaint__c</columns>
        <columns>rstkf__paysessinv_amtwht__c</columns>
        <columns>rstkf__paysessinv_maintamt__c</columns>
        <columns>rstkf__paysessinv_disctermamt__c</columns>
        <columns>rstkf__paysessinv_disctknamt__c</columns>
        <columns>rstkf__paysessinv_discavailable__c</columns>
        <columns>rstkf__paysessinv_grosspay__c</columns>
        <columns>rstkf__paysessinv_netpay__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstkf__paysessinv_amtwht__c</field>
            <operation>equals</operation>
            <value>5000</value>
        </filters>
        <label>P_VIEW</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstkf__Payment_Selection_Session_Invoices_FILT</fullName>
        <columns>NAME</columns>
        <columns>rstkf__paysessinv_paysessvend__c</columns>
        <columns>rstkf__paysessinv_apinvtxn__c</columns>
        <columns>rstkf__paysessinv_process__c</columns>
        <columns>rstkf__paysessinv_amtapplmaint__c</columns>
        <columns>rstkf__paysessinv_unapplamtmaint__c</columns>
        <columns>rstkf__paysessinv_maintamt__c</columns>
        <columns>rstkf__paysessinv_termsbasedate__c</columns>
        <columns>rstkf__paysessinv_termsdiscdate__c</columns>
        <columns>rstkf__paysessinv_disctermamt__c</columns>
        <columns>rstkf__paysessinv_disctknamt__c</columns>
        <columns>rstkf__paysessinv_discavailable__c</columns>
        <columns>rstkf__paysessinv_grosspay__c</columns>
        <columns>rstkf__paysessinv_netpay__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Payment Selection Session Invoices-FILT</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstkf__RS_PaymBCCent_Selection_Session_Invoices</fullName>
        <columns>LAST_UPDATE</columns>
        <columns>rstkf__paysessinv_apinvtxn__c</columns>
        <columns>rstkf__paysessinv_amtwht__c</columns>
        <columns>rstkf__paysessinv_disctermamt__c</columns>
        <columns>rstkf__paysessinv_process__c</columns>
        <columns>rstkf__paysessinv_amtapplmaint__c</columns>
        <columns>rstkf__paysessinv_unapplamtmaint__c</columns>
        <columns>rstkf__paysessinv_maintamt__c</columns>
        <columns>NAME</columns>
        <columns>rstkf__paysessinv_paysessvend__c</columns>
        <columns>rstkf__paysessinv_termsdiscdate__c</columns>
        <columns>rstkf__paysessinv_disctknamt__c</columns>
        <columns>rstkf__paysessinv_discavailable__c</columns>
        <columns>rstkf__paysessinv_grosspay__c</columns>
        <columns>rstkf__paysessinv_netpay__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>contains</operation>
            <value>beatriz</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>wht</value>
        </filters>
        <label>Payment Selection Session Invoices BCC</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstkf__RS_Payment_Selection_Session_Invoices</fullName>
        <columns>NAME</columns>
        <columns>rstkf__paysessinv_paysessvend__c</columns>
        <columns>rstkf__paysessinv_apinvtxn__c</columns>
        <columns>rstkf__paysessinv_process__c</columns>
        <columns>rstkf__paysessinv_apapplic__c</columns>
        <columns>rstkf__paysessinv_amtapplmaint__c</columns>
        <columns>rstkf__paysessinv_maintamt__c</columns>
        <columns>rstkf__paysessinv_termsbasedate__c</columns>
        <columns>rstkf__paysessinv_termsdiscdate__c</columns>
        <columns>rstkf__paysessinv_disctermamt__c</columns>
        <columns>rstkf__paysessinv_disctknamt__c</columns>
        <columns>rstkf__paysessinv_discavailable__c</columns>
        <columns>rstkf__paysessinv_grosspay__c</columns>
        <columns>rstkf__paysessinv_netpay__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Payment Selection Session Invoices</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Payment Selection Session Invoices Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Selection Session Invoices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>rstkf__NET_PAYMENT_AMOUNT_VALIDATION</fullName>
        <active>true</active>
        <errorConditionFormula>rstkf__paysessinv_process__c == true &amp;&amp; rstkf__paysessinv_bypasspost__c == false &amp;&amp; !ISBLANK(rstkf__paysessinv_netpay__c) &amp;&amp; ( (rstkf__paysessinv_trantype__c != &apos;Vendor Credit&apos; &amp;&amp; (rstkf__paysessinv_netpay__c &gt; (rstkf__paysessinv_unapplamtmaint__c - rstkf__paysessinv_disctknamt__c - rstkf__paysessinv_amtwht__c) )) || (rstkf__paysessinv_trantype__c == &apos;Vendor Credit&apos; &amp;&amp; (rstkf__paysessinv_netpay__c &lt; (rstkf__paysessinv_unapplamtmaint__c - rstkf__paysessinv_disctknamt__c - rstkf__paysessinv_amtwht__c) )) )</errorConditionFormula>
        <errorMessage>Net Payment Amount cannot be greater than the difference between Amount Unapplied, Discount Taken and WHT Amount</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__PAYSESINV_DISCTKNAMT_VALIDATION</fullName>
        <active>true</active>
        <description>Amount of Discount Taken Validation</description>
        <errorConditionFormula>rstkf__paysessinv_process__c == true &amp;&amp; rstkf__paysessinv_bypasspost__c == false &amp;&amp; !ISBLANK(rstkf__paysessinv_disctknamt__c) &amp;&amp; rstkf__paysessinv_disctknamt__c != 0 &amp;&amp;(!rstkf__paysessinv_paysessvend__r.rstkf__paysessvend_paysession__r.rstkf__paysession_doterms__c 
  || rstkf__paysessinv_disctknamt__c &lt; 0
  || rstkf__paysessinv_disctknamt__c &gt; rstkf__paysessinv_discavailable__c)</errorConditionFormula>
        <errorMessage>Amount of Discount Taken can only be set if Take Advantage of Terms Discounts is checked on the payment selection session, and cannot be greater than the Discount Available.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstkf__PAYSESSINV_AMTWHT_VALIDATION</fullName>
        <active>true</active>
        <description>WHT Amount Validation</description>
        <errorConditionFormula>rstkf__paysessinv_process__c == true &amp;&amp; rstkf__paysessinv_bypasspost__c == false &amp;&amp; !ISBLANK(rstkf__paysessinv_amtwht__c) &amp;&amp; rstkf__paysessinv_amtwht__c != 0 
	&amp;&amp; (!rstkf__paysessinv_apinvtxn__r.rstkf__apinvtxn_dowht__c ||
		rstkf__paysessinv_amtwht__c &gt; (BLANKVALUE(rstkf__paysessinv_unapplamtmaint__c, 0) - BLANKVALUE(rstkf__paysessinv_disctknamt__c, 0)))</errorConditionFormula>
        <errorMessage>WHT Amount can only be set if WHT Transaction is checked on the associcated payable transaction, and cannot be greater than the difference between Amount Unapplied and Discount Taken</errorMessage>
    </validationRules>
</CustomObject>